--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="./css/main.css">
 
   <title>ExpertD.</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4183008551621588"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -215,7 +217,7 @@
 
       <form method="POST" data-netlify="true" action="#">
         <div class="mb-3">
-          <input type="email" class="form-control" id="email" name="email" placeholder="nombre@ejemplo.com">
+          <input type="email" class="form-control" id="email" name="email" placeholder="mrdariel2@gmail.com">
         </div>
 
 
@@ -250,7 +252,7 @@
     <p class="fs-5 px-3  pt-3">&copy; Dariel Dilone Espinal</p>
     <div id="iconos">
       <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-twitter"></i></a>
+      <a href="https://github.com/Darieldde/agencia-de-viajes/edit/master/index.html"><i class="bi bi-git hub"></i></a>
       <a href="#"><i class="bi bi-instagram"></i></a>
     </div>
   </footer>
