--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!--Header-->
 
   <header class="container-fluid bg-primary d-flex justify-content-center">
-    <p class="text-light mb-0 p-2 fs-6">Contactanos +1 (829-660-7758)</p>
+    <p class="text-light mb-0 p-2 fs-6">HAGO MAQUETACIONES DE PAGINAS SIN NINGUN COSTO: +1 (829-660-7758)</p>
   </header>
 
   <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu">
@@ -252,7 +252,7 @@
     <p class="fs-5 px-3  pt-3">&copy; Dariel Dilone Espinal</p>
     <div id="iconos">
       <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="https://github.com/Darieldde/agencia-de-viajes/edit/master/index.html"><i class="bi bi-git hub"></i></a>
+      <a href="https://github.com/Darieldde/agencia-de-viajes"><i class="bi bi-github"></i></a>
       <a href="#"><i class="bi bi-instagram"></i></a>
     </div>
   </footer>
