--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!--Header-->
 
   <header class="container-fluid bg-primary d-flex justify-content-center">
-    <p class="text-light mb-0 p-2 fs-6">HAGO MAQUETACIONES DE PAGINAS SIN NINGUN COSTO: +1 (829-660-7758)</p>
+    <p class="text-light mb-0 p-2 fs-6">CONTACTO: +1 (829-660-7758)</p>
   </header>
 
   <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu">
